# emehcs

./: .gitignore  CMakeLists.txt  env.c  evaluation.c  main.c  optimizer.c  parser.c  tokenizer.c  tokenizer.h
builtin/: add.c  branch.c  comp.c  define.c  display.c  internals.c  lambda.c  let.c  list.c  minus.c  mul.c  pair.c  quote.c  setup.c
include/: builtin.h  evaluation.h  optimizer.h  parser.h  tokenizer.h
include/utils/: error.h  extarr.h  peekable.h
utils/: error.c  extarr.c  extarr.h  peekable.c  utils.h
